Adding GraphView and Javaluator to graph and solve

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -44,4 +44,6 @@
     <string name="tstSinDatosGuardados">There is no record of operations performed</string>
     <string name="tstDatosEliminados">Deleted data</string>
     <string name="tstZoom">Enfocar</string>
+    <string name="btnGraficar">Graph</string>
+    <string name="etInstGraficar">Enter a function that depends on X</string>
 </resources>
